--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Your Life Plan Buddy</title>
   <meta name="description" content="Henston Clint Isidera — Financial Advisor at PRU Life UK. Protection, health, & investment plans. Book a consultation.">
-  <link rel="icon" type="image/ico" href="favicon.ico">
+  <link rel="icon" type="image/ico" href="favicon11.ico">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
